[gd_scene load_steps=2 format=3 uid="uid://d2map456"]

[ext_resource type="Script" path="res://scenes/ui/screens/MapScreen.gd" id="1_map"]

[node name="MapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_map")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.08, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üó∫Ô∏è D√ºnya Haritasƒ±"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="CurrentLocationPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/CurrentLocationPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/CurrentLocationPanel/HBox"]
layout_mode = 2
text = "Mevcut Konum:"
theme_override_font_sizes/font_size = 24

[node name="LocationLabel" type="Label" parent="MarginContainer/VBox/CurrentLocationPanel/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ba≈ükent - G√∂lge ≈ûehir"
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RegionList" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
